# structured-agent

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  history.md  pyproject.toml
.github/workflows/: ci.yml
src/structured-agent/: Cargo.toml  execution-slides.md  ideas.md
src/structured-agent-zed/: .gitignore  INSTALL.md  README.md  extension.toml  setup.sh  test.sa
src/structured-agent-zed/languages/structured-agent/: config.toml  highlights.scm  textobjects.scm
src/structured-agent-zed/languages/structured-agent/queries/: highlights.scm
src/structured-agent/.cargo/: config.toml
src/structured-agent/samples/: LICENSE  agent-recursive.sa  agent.sa  argument_evaluator.sa  boolean.sa  branching_functions.sa  chat-loop.sa  chat-recursive.sa  config.toml  control_flow.sa  example.sa  hello.sa  if_statement.sa  interactive_functions.sa  interactive_loop.sa  interactive_recursive.sa  invalid.sa  no-main.sa  simple_boolean.sa  simple_control_flow.sa  test.sa  variables.sa  verbose.sa  while_statement.sa
src/structured-agent/samples/controlflow/: duplicate_injections.sa  empty_blocks.sa  empty_functions.sa  placeholder_overuse.sa
src/structured-agent/src/: lib.rs  main.rs  test_doc.rs  types.rs
src/structured-agent/src/acp/: agent.rs  mod.rs  runtime.rs  server.rs  tracing.rs
src/structured-agent/src/acp/functions/: mod.rs  receive.rs  try_receive.rs
src/structured-agent/src/analysis/: constant_conditions.rs  constant_conditions_test.rs  duplicate_injections.rs  duplicate_injections_test.rs  empty_blocks.rs  empty_blocks_test.rs  empty_functions.rs  empty_functions_test.rs  infinite_loops.rs  mod.rs  overwritten_values.rs  overwritten_values_test.rs  placeholder_overuse.rs  placeholder_overuse_test.rs  redundant_select.rs  redundant_select_test.rs  tests.rs  unreachable_code.rs  unused_expressions.rs  unused_expressions_test.rs  unused_return_values.rs  unused_return_values_test.rs  unused_variables.rs  variable_shadowing.rs  variable_shadowing_test.rs
src/structured-agent/src/ast/: mod.rs
src/structured-agent/src/bytecode/: builder.rs  compiler.rs  function_expr.rs  instruction.rs  mod.rs  tests.rs  vm.rs  vm_test.rs
src/structured-agent/src/cli/: app.rs  args.rs  config.rs  errors.rs  mod.rs
src/structured-agent/src/compiler/: expression_compiler.rs  mod.rs  parser.rs
src/structured-agent/src/diagnostics/: mod.rs  reporter.rs
src/structured-agent/src/expressions/: assignment.rs  boolean.rs  call.rs  external_function.rs  function.rs  if_else.rs  if_stmt.rs  injection.rs  list_literal.rs  mod.rs  native_function.rs  placeholder.rs  return_stmt.rs  select.rs  string_literal.rs  unit_literal.rs  variable.rs  variable_assignment.rs  while_stmt.rs
src/structured-agent/src/functions/: head.rs  input.rs  mod.rs  print.rs  tail.rs
src/structured-agent/src/functions/acp_shim/: mod.rs  receive.rs  try_receive.rs
src/structured-agent/src/functions/unstable/: head.rs  mod.rs  tail.rs
src/structured-agent/src/functions/unstable/option/: is_some.rs  is_some_list.rs  mod.rs  some_value.rs  some_value_list.rs
src/structured-agent/src/gemini/: client.rs  config.rs  engine.rs  error.rs  mod.rs  types.rs
src/structured-agent/src/mcp/: mod.rs
src/structured-agent/src/runtime/: boolean_test.rs  context.rs  control_flow_test.rs  engine.rs  engine_test.rs  function_call_test.rs  mod.rs  native_provider.rs  scoping_test.rs  signature_mismatch_test.rs  types.rs
src/structured-agent/src/typecheck/: checker.rs  error.rs  integration_test.rs  mod.rs  tests.rs
src/structured-agent/tests/: acp.rs  acp_test_helpers.rs  assignment_test.rs  gemini.rs  gemini_integration_test.rs  gemini_live_test.rs  gemini_select_test.rs  integration.rs  integration_test.rs  mcp.rs  mcp_echo_integration_test.rs  return_statement_test.rs  simple_test.rs
src/structured-agent/tests/acp/: receive_test.rs  reload_test.rs  session_tracing_test.rs  test_helpers.rs
src/structured-agent/tests/gemini/: live_test.rs  select_test.rs
src/structured-agent/tests/integration/: assignment_test.rs  integration_test.rs  return_statement_test.rs  simple_test.rs  tracing_integration.rs
src/structured-agent/tests/mcp/: echo_integration_test.rs  mcp_echo_server.py
tests/integration/: test_acp_server.py
