[workspace]
resolver = "2"

members = [
    "src/structured-agent",
    "src/structured-agent-zed/tree-sitter-structured-agent",
]

[workspace.package]
edition = "2021"
license = "GPL-3.0-or-later WITH GCC-exception-3.1"

# [profile.release]
# opt-level = 3
# lto = true
# codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
