[workspace]
resolver = "2"

members = [
    "src/structured-agent",
    "src/structured-agent-zed/tree-sitter-structured-agent",
]

[workspace.package]
edition = "2021"
license = "GPL-3.0-or-later WITH GCC-exception-3.1"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.30.3"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
# Path that installers should place binaries in
install-path = "CARGO_HOME"

[workspace.metadata.dist.dependencies.apt]
libc6 = { version = "*" }

# [profile.release]
# opt-level = 3
# lto = true
# codegen-units = 1

[profile.dev]
opt-level = 0
debug = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo release'
[workspace.metadata.release]
allow-branch = ["main", "master"]
push = true
tag = true
tag-name = "{{version}}"
