[project]
name = "structured-agent"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-3.0-or-later WITH GCC-exception-3.1"
dependencies = [
    "agent-client-protocol>=0.8.1",
    "fastmcp>=2.14.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
]
