[package]
name = "structured-agent"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "structured-agent"
path = "src/main.rs"



[dependencies]
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
codespan-reporting = "0.11"
combine = "4.6.7"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = { version = "2.4", features = ["serde"] }
rust-mcp-sdk = "0.8.1"
dashmap = "6.1.0"
