[package]
name = "structured-agent"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "structured-agent"
path = "src/main.rs"



[dependencies]
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
codespan-reporting = "0.11"
combine = "4.6.7"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
url = { version = "2.4", features = ["serde"] }
rust-mcp-sdk = "0.8.1"
dashmap = "6.1.0"
arrow = { version = "57.2.0", default-features = false }
schemars = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
agent-client-protocol = "0.9.4"
agent-client-protocol-schema = "0.10.8"
tokio-util = { version = "0.7", features = ["compat"] }
