[package]
name = "structured-agent"
version = "0.2.0"
edition = "2024"
license.workspace = true
repository = "https://github.com/wigmorewelsh/structured-agent"
description = "A structured agent for working with code and AI models"
homepage = "https://github.com/wigmorewelsh/structured-agent"

[[bin]]
name = "structured-agent"
path = "src/main.rs"



[dependencies]
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
codespan-reporting = "0.11"
combine = "4.6.7"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
url = { version = "2.4", features = ["serde"] }
rmcp = { version = "0.15", features = ["client", "transport-child-process", "macros"] }
dashmap = "6.1.0"
arrow = { version = "57.2.0", default-features = false }
schemars = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
agent-client-protocol = "0.9.4"
agent-client-protocol-schema = "0.10.8"
tokio-util = { version = "0.7", features = ["compat"] }
dirs = "5.0"

[dev-dependencies]
tempfile = "3.0"

[package.metadata.release]
pre-release-replacements = [
  {file="../../pyproject.toml", search="version = \".*\"", replace="version = \"{{version}}\"", exactly=1},
]
